@@ -1098,6 +1098,9 @@ Applicable only if PriorityType=priority/multifactor.
 \fBACCRUE_ALWAYS\fR
 If set, priority age factor will be increased despite job dependencies 
 or holds.
+.TP
+\fBTICKET_BASED\fR
+If set, priority will be calculated based on the ticket system.
 .RE
 
 .TP
