@@ -43,6 +43,8 @@ CONFIGURATION FILE CHANGES (see "man slurm.conf" for details)
  - Added new cray.conf parameter of "AlpsEngine" to specify the communication
    protocol to be used for ALPS/BASIL.
  - Added new SelectTypeParameter value of "CR_ALLOCATE_FULL_SOCKET".
+ - Added PriorityFlags value of "TICKET_BASED" and merged priority/multifactor2
+   plugin into priority/multifactor plugin.
 
 COMMAND CHANGES (see man pages for details)
 ===========================================
